force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Inactivate records to ignore them from the related list lwc</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>