force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <description>API Names of the Child Objects.
List of Values have to beRelated objects to the supported Parent Objects.</description>
    <inlineHelpText>Select Child Object related to the Parent Object selected</inlineHelpText>
    <label>Child Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <default>true</default>
                <label>Case</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Invoice__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>