force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/Custom_WHERE_Clause__c.field-meta.xml
<CustomField>
    <fullName>Custom_WHERE_Clause__c</fullName>
    <description>Custom where clause to query the related records.</description>
    <inlineHelpText>Custom where clause to query the related records.</inlineHelpText>
    <label>Custom WHERE Clause</label>
    <type>TextArea</type>
</CustomField>