force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/Delete_Action__c.field-meta.xml
<CustomField>
    <fullName>Delete_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to support record level Delete action in the Related List</description>
    <inlineHelpText>Enable record level Delete action in the Related List</inlineHelpText>
    <label>Enable Delete Action</label>
    <type>Checkbox</type>
</CustomField>