force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <inlineHelpText>URL for the sObject Icon to display. It can be either standard or from static resource.
e.g for Contacts: /img/icon/t4v35/standard/contact_120.png</inlineHelpText>
    <label>Icon URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>