force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/Number_of_Rows__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rows__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Number of rows to display by default in the related list, to allow scrolling.</description>
    <inlineHelpText>Number of rows to display by default in the related list, to allow scrolling.</inlineHelpText>
    <label>Number of Rows</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>