force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/Upload_Files_Action__c.field-meta.xml
<CustomField>
    <fullName>Upload_Files_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Upload Files Action</label>
    <type>Checkbox</type>
</CustomField>