force-app/main/default/objects/objects/Related_List_Configuration__mdt/fields/View_Action__c.field-meta.xml
<CustomField>
    <fullName>View_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to support record level View Details action in Related List</description>
    <inlineHelpText>Enable record level View Details action in Related List</inlineHelpText>
    <label>Enable View Action</label>
    <type>Checkbox</type>
</CustomField>