force-app/main/default/objects/objects/Related_List_Configuration__mdt/validationRules/No_Big_Objects_Allowed_Child.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Big_Objects_Allowed_Child</fullName>
    <active>true</active>
    <description>Related List is not a good option for BigObjects</description>
    <errorConditionFormula>IF ( CONTAINS( TEXT(Child_Object__c), &#39;__b&#39;), true, false)</errorConditionFormula>
    <errorDisplayField>Child_Object__c</errorDisplayField>
    <errorMessage>Big Objects cannot be used in the Related List. Supports standard and custom objects only.</errorMessage>
</ValidationRule>