force-app/main/default/objects/objects/Related_List_Configuration__mdt/validationRules/No_External_Objects_Allowed_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>No_External_Objects_Allowed_Parent</fullName>
    <active>true</active>
    <description>Related List is not a good option for External Objects</description>
    <errorConditionFormula>IF ( CONTAINS( TEXT(Parent_Object__c), &#39;__x&#39;), true, false)</errorConditionFormula>
    <errorDisplayField>Parent_Object__c</errorDisplayField>
    <errorMessage>External Objects cannot be used in the Related List. Supports standard and custom objects only.</errorMessage>
</ValidationRule>